--- a/CO2/PROJECT/APP/templates/Homepage.html
+++ b/CO2/PROJECT/APP/templates/Homepage.html
@@ -64,6 +64,7 @@
 	<div class="button-container">
 		<button onclick="window.location.href='Indexpage.html'">CONTENTS</button>
 	</div>
+	<a href="index">Indexpage</a>
 </body>
 </html>
 
