--- a/CO2/PROJECT/APP/templates/Homepage.html
+++ b/CO2/PROJECT/APP/templates/Homepage.html
@@ -62,9 +62,8 @@
 		</ul>
 	</div>
 	<div class="button-container">
-		<button onclick="window.location.href='Indexpage.html'">CONTENTS</button>
+		<button onclick="window.location.href='index'">CONTENTS</button>
 	</div>
-	<a href="index">Indexpage</a>
 </body>
 </html>
 
