--- a/CO2/PROJECT/APP/templates/Indexpage.html
+++ b/CO2/PROJECT/APP/templates/Indexpage.html
@@ -24,6 +24,6 @@
 <body>
 	<h1>My Website</h1>
 	<p>Click on a button to go to a website:</p>
-	<button onclick="window.location.href='Homepage.html'">Home</button>
+	<button onclick="window.location.href='home'">Home</button>
 </body>
 </html>
