--- a/CO2/PROJECT/APP/templates/Indexpage.html
+++ b/CO2/PROJECT/APP/templates/Indexpage.html
@@ -25,5 +25,8 @@
 	<h1>My Website</h1>
 	<p>Click on a button to go to a website:</p>
 	<button onclick="window.location.href='home'">Home</button>
+	<div>
+		<img src="templates/image1.png" alt="image is not available">
+	</div>
 </body>
 </html>
